--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,20 @@
 <!-- Header -->
 <header id="header"{% if page.layout == 'landing' %} class="alt"{% endif %}>
   <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+  <nav id="nav">
+    <ul>
+      <li class="special">
+        <a href="#menu" class="menuToggle"></a>
+        <div id="menu">
+          <ul>
+            {% for lang in site.data.languages %}
+            {% if lang.id == site.lang %} {% continue %} {% endif %}
+            <li><a href="{{ lang.url | prepend: site.baseurl_root }}">{{ lang.icon }}{{ lang.label }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+      </li>
+    </ul>
+  </nav>
+
 </header>
