--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,6 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: 'https://antjeandmouhcine.wedding' }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl_root }}" />
-  <meta name="og:image" content="{{ "/images/preview_smaller.jpg" | prepend: site.baseurl_root }}">
+  <meta name="og:image" content="{{ "/images/preview.jpg" | prepend: site.baseurl_root }}">
   <meta name="theme-color" content="#ffffff">
 </head>
